messages list is boardered table

--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,11 @@
   font-size: smaller;
   font-style: italic;
 }
+
+
+.bordered-table {
+  border-collapse: collapse;
+}
+.bordered-table th, .bordered-table td {
+  border: 1px solid black;
+}
