--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@
 /* Style the buttons that are used to open the tab content */
 .tab button {
   background-color: inherit;
+  font-size: larger;
   float: left;
   border: none;
   outline: none;
