--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     margin: auto;
     width: 70%;
     padding: 0 20px;
-    background: #f9f9f9;
+    background:white;
     color: #333;
     line-height: 2;
     font-size: larger;
